<resources>
    <string name="app_name">Collect App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number"> Phone Number </string>
    <string name="password"> Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_up"> Sign Up</string>
    <string name="sign_in"> Sign In</string>
    <string name="submit"> submit </string>
    <string name="otp">Enter OTP</string>
    <string name="user_name">Username</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="sign_in_image">Sign In Image</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="check_otp_on_your_mobile_number">Check OTP on your Mobile Number</string>
    <string name="forgot_password_desc">Enter your Registered Phone Number to get OTP</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_password">New Password</string>
    <string name="cancel">Cancel</string>
    <string name="session_name">Session Name</string>
    <string name="session_token">Session Token</string>
    <string name="members">Members</string>
    <string name="notification">Notification</string>
    <string name="all_transactions">All Transactions</string>
    <string name="transaction_group">Transaction Group</string>
    <string name="member_joined_date">joined</string>
    <string name="rupee" translatable="false">\u20B9 %1$s</string>
    <string name="rupee_with_negative_sign" translatable="false">-\u20B9 %1$s</string>
    <string name="rupee_with_positive_sign" translatable="false">+\u20B9 %1$s</string>
    <string name="rupee_symbol" translatable="false">\u20B9</string>
    <string name="percentage" translatable="false"> %1$s%</string>
    <string name="from_to">%1$s to %1$s</string>
    <string name="sample_desc">This is a description of the group Hello , you understand right. OK then, cool. Hope you are…</string>
    <string name="sample_short_desc">Created 6 months ago by Mango Man</string>
    <string name="sample_name">Fresher Collections</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="join_session">Join Session</string>
    <string name="enter_session_token">Enter Session Token</string>
    <string name="create_session">Create Session</string>
    <string name="enter_session_name">Enter Session Name</string>
    <string name="sample_username">Tazril Parveez Ali</string>
    <string name="sample_amount">$ 540</string>
    <string name="sample_number">7238127391</string>
    <string name="members_count">Members Count:</string>
    <string name="amount_collected">Amount Collected</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="chat">Chat</string>
    <string name="transactions">Transactions</string>
    <string name="groups">Groups</string>
    <string name="token">Token</string>
    <string name="sample_token">asudoajoajdansja</string>
    <string name="description">Description</string>
    <string name="sample_duration">joined 3 days ago</string>
    <string name="paid">Paid</string>
    <string name="call">Call</string>
    <string name="recieved_by">Recieved By</string>
    <string name="group_name">Group Name</string>
</resources>
